--- a/References.bib
+++ b/References.bib
@@ -20,6 +20,26 @@ doi = {10.18637/jss.v076.i01},
 author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B and Betancourt, M and Brubaker, MA and Guo, J and Li, P and Riddell, A}
 }
 
+@article{gelman1992iterative,
+author = {Gelman, A and Rubin, DB},
+title = {Inference from Iterative Simulation Using Multiple Sequences},
+journal = {Statistical Science},
+volume = {7},
+number = {4},
+pages = {457-472},
+doi = {https://doi.org/10.1214/ss/1177011136},
+year = {1992}
+}
+
+@misc{gelman2020bayesian,
+      title={Bayesian Workflow}, 
+      author={Andrew Gelman and Aki Vehtari and Daniel Simpson and Charles C. Margossian and Bob Carpenter and Yuling Yao and Lauren Kennedy and Jonah Gabry and Paul-Christian Bürkner and Martin Modrák},
+      year={2020},
+      eprint={2011.01808},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME}
+}
+
 @article{hebert2003biological,
   title={Biological identifications through {DNA} barcodes},
   author={Hebert, PDN and Cywinska, A and Ball, SL and deWaard, J},
@@ -64,7 +84,7 @@ author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B 
 }
 
 @article{hubert2015dna,
-  title={DNA Barcoding, species delineation and taxonomy: a historical perspective},
+  title={{DNA} Barcoding, species delineation and taxonomy: a historical perspective},
   author={Hubert, Nicolas and Hanner, Robert},
   journal={DNA Barcodes},
   volume={3},
@@ -216,6 +236,17 @@ doi = {10.1007/978-1-0716-3581-0_24},
   note = {R package version 2.21.8},
   year = {2023},
   url = {https://mc-stan.org/}
+}
+
+@article{vehtari2017rank,
+author = {Vehtari, A and Gelman, A and Simpson, D and Carpenter, B and B{\"u}rkner, P-C},
+title = {Rank-normalization, folding, and localization: {A}n improved \textit{{{\^ R}}} for assessing convergence of {MCMC} (with discussion)},
+journal = {Bayesian Analysis},
+volume = {16},
+number = {2},
+pages = {667-718},
+doi = {https://doi.org/10.1214/20-BA1221},
+year = {2021}
 }
 
 @article{yang2017bayesian,
