--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -94,7 +94,7 @@ p'_x &= \frac{\#\{d_{ij} \geq a'\}}{\#\{d_{ij}\}} \\[1mm]
 q'_x &= \frac{\#\{d'_{XY} \leq b\}}{\#\{d'_{XY}\}}
 \end{align}
 
-\noindent where $d_{ij}$ are pairwise genetic distances within species, $d_{XY}$ are genetic distances among species for an entire genus of concern, and $d'_{XY}$ are combined interspecific distances for a target species and its closest neighbouring species. The notation \# reflects a count.  Quantities $a$, $a'$, and $b$ correspond to min($d_{XY}$), min($d'_{XY}$), and max($d_{ij}$), the minimum interspecific distance, and the maximum intraspecific distance, respectively (\textbf{Figure 1}). \\ Hence, Equations (1)-(4) are simply empirical means of genetic distances falling at and below, or at and exceeding given distribution thresholds. Notice further that $a$/$a'$, and $b$ are also the first and $n$th order statistics, $X_{(1)}$ and $X_{(n)}$, respectively. Equations (1)-(4) can be also be expressed in terms of empirical cumulative distribution functions (ECDFs) (see \textbf{Supplementary Information} for details). Genetic distances are easily computed from a model of DNA sequence evolution, such as uncorrected or corrected p-distances \citep{jukes1969evolution, kimura1980simple}. If a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average pairwise interspecific distance is used. While these schemes differ \\ considerably from the usual definition of the DNA barcode gap laid out by \citet{meyer2005dna} and \citet{meier2008use}, they more accurately account for species' coalescence histories inferred from contemporaneous samples of DNA sequences, such as interspecific hybridization/introgression events \citep{phillips2024measure}. Note, genetic distances are \\ constrained to the unit interval [0, 1], whereas the metrics are defined only on [$a$/$a'$, b]. Values of the estimators obtained from equations (1)-(4) close to or equal to zero give evidence for separation between intraspecific and interspecific genetic distance distributions; that is, values suggest the presence of a DNA barcode gap for a target species. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a gap. 
+\noindent where $d_{ij}$ are pairwise genetic distances within species, $d_{XY}$ are genetic distances among species for an entire genus of concern, and $d'_{XY}$ are combined interspecific distances for a target species and its closest neighbouring species. The notation \# reflects a count.  Quantities $a$, $a'$, and $b$ correspond to min($d_{XY}$), min($d'_{XY}$), and max($d_{ij}$), the minimum interspecific distance, and the maximum intraspecific distance, respectively (\textbf{Figure 1}). \\ Hence, Equations (1)-(4) are simply empirical means of genetic distances falling at and below, or at and exceeding given distribution thresholds. Notice further that $a$/$a'$, and $b$ are also the first and $n$th order statistics, $X_{(1)}$ and $X_{(n)}$, respectively. Equations (1)-(4) can be also be expressed in terms of empirical cumulative distribution functions (ECDFs) (see \textbf{Supplementary Information} for details). Genetic distances are easily computed from a model of DNA sequence evolution, such as uncorrected or corrected p-distances \citep{jukes1969evolution, kimura1980simple}. If a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average pairwise interspecific distance is used. While these schemes differ considerably from the usual definition of the DNA barcode gap laid out by \citet{meyer2005dna} and \citet{meier2008use}, they more accurately account for species' coalescence histories inferred from contemporaneous samples of DNA sequences, such as interspecific hybridization/introgression events \citep{phillips2024measure}. Note, genetic distances are constrained to the unit interval [0, 1], whereas the metrics are defined only on [$a$/$a'$, b]. Values of the estimators obtained from equations (1)-(4) close to or equal to zero give evidence for separation between intraspecific and interspecific genetic distance distributions; that is, values suggest the presence of a DNA barcode gap for a target species. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a gap. 
 
 \subsection{A Bayesian Implementation}
 
@@ -131,7 +131,7 @@ Convergence was assessed both visually and quantitatively as follows: (1) throug
 
 A number of summary quantities were reported, including posterior means, posterior SDs, and posterior quantiles from which 95\% CrIs could be computed to make probabilistic inferences concerning true population parameters.
 
-To validate the overall correctness of the proposed statistical model given by \\ Equation (6), in addition to generating MLEs using Equations (1)-(4) and ECDFs via R's {\tt ecdf()} function, as a means of comparison, posterior predictive checks were also employed to generate binomial random variates in the form of counts from the posterior predictive distribution; that is $\gamma = \{Np_x, Mq_x, Np^{'}_x, Cq^{'}_x\}$ to verify that the model adequately captures relevant features of the observed data.
+To validate the overall correctness of the proposed statistical model given by \\ Equation (6), in addition to generating MLEs using Equations (1)-(4) and ECDFs via {\tt ggplot2}'s {\tt stat\_ecdf()} function \citep{wickham2016ggplot2}, as a means of comparison, posterior predictive checks were also employed to generate binomial random variates in the form of counts from the posterior predictive distribution; that is $\gamma = \{Np_x, Mq_x, Np^{'}_x, Cq^{'}_x\}$ to verify that the model adequately captures relevant features of the observed data.
 
 The proposed Bayesian model outlined herein has a straightforward interpretation \\ (\textbf{Table 1}). 
 
@@ -139,6 +139,9 @@ The proposed Bayesian model outlined herein has a straightforward interpretation
 
 \section{Discussion}
 
+- hierarchical models - difficult to fit
+
+- mixture models - identifiability issues
 
 \newpage
 
