--- a/Supplementary Information.tex
+++ b/Supplementary Information.tex
@@ -49,10 +49,10 @@
 For a given random variable $X$, its cumulative distribution function (CDF) is defined by
 
 \begin{align}
-F_X(t) = \mathbb{P}(X \leq t).= 1 - \mathbb{P}(X > t) 
+F_X(t) = \mathbb{P}(X \leq t) = 1 - \mathbb{P}(X > t) 
 \end{align}
 
-\noindent Equations (1)-(4) within the main text can be expressed in terms of empirical cumulative distribution functions (ECDFs) as follows, since the true underlying CDFs, $F(\cdot)$, are \\ unknown \textit{a priori}: 
+\noindent Equations (1)-(4) within the main text can be expressed in terms of empirical cumulative distribution functions (ECDFs) as follows, since the true underlying CDFs, $F(\cdot)$, are \\ unknown \textit{a priori}, and therefore must be estimated using available data:
 
 \begin{align}
 p_x  &= \mathbb{P}(d_{ij} \geq a) \notag \\
@@ -60,33 +60,26 @@ p_x  &= \mathbb{P}(d_{ij} \geq a) \notag \\
      &= \hat{F}_{d_{ij}}(b) - \hat{F}_{d_{ij}}(a) +  \mathbb{P}(d_{ij} = a) \\[1ex]
 q_x  &=  \mathbb{P}(d_{XY} \leq b) \notag \\
      &= \hat{F}_{d_{XY}}(b) \\[1ex]
-p'_x &=  \mathbb{P}(d_{ij} \geq a') +  \mathbb{P}(d_{XY} = a') \notag \\
+p'_x &=  \mathbb{P}(d_{ij} \geq a') \notag \\
      &= 1 - \hat{F}_{d_{ij}}(a') +  \mathbb{P}(d_{XY} = a') \notag \\
      &= \hat{F}_{d_{ij}}(b) - \hat{F}_{d_{ij}}(a') +  \mathbb{P}(d_{XY} = a')  \\[1ex]
 q'_x &=  \mathbb{P}(d'_{XY} \leq b) \notag \\
      &= \hat{F}_{d'_{XY}}(b)
 \end{align}
 
-\noindent noting that $\mathbb{P}(d_{ij} \leq b) = \hat{F}_{d_{ij}}(b) = 1$, $\mathbb{P}(d_{XY} \leq a) = \hat{F}_{d_{XY}}(a) = 0$, and \\ $\mathbb{P}(d'_{XY} \leq a') = \hat{F}_{d'_{XY}}(a') = 0$ (see \textbf{Figure 1} in main text). Given $n$ increasing-ordered data points, the (discrete) ECDF, $\hat{F}_n(t) = \frac{1}{n}\sum_{i = 1}^n\mathds{1}_{[x_i \leq t]}$, comprises a step function having jump \\ discontinuities of size $\frac{1}{n}$ at each sample observation ($x_i$), excluding ties (or steps of weight $\frac{i}{n}$ with tied observations), where $\mathds{1}(x)$ is the indicator function. Equations (1)-(4) herein clearly demonstrate the asymmetric directionality of the proposed metrics. Furthermore, calculation of the DNA barcode gap estimators given in the main text is straightforward as they implicitly account for both total distribution area and overlap. Nevertheless, the total areas bounded by intraspecific and interspecific distributions on [$a$, $b$], and combined distributions on [$a'$, $b$] (see \textbf{Figure 1} in main text) are given by the joint ECDFs, \\ $\hat{F}_{d_{ij}, \hspace{0.5mm} d_{XY}}(a, b) = \mathbb{P}(d_{ij} \geq a, d_{XY} \leq b)$ and $\hat{F}_{d_{ij}, \hspace{0.5mm} d'_{XY}}(a', b) = \mathbb{P}(d_{ij} \geq a', d'_{XY} \leq b)$. Thus,
+\noindent noting that $\mathbb{P}(d_{ij} \leq b) = \hat{F}_{d_{ij}}(b) = 1$, $\mathbb{P}(d_{XY} \leq a) = \hat{F}_{d_{XY}}(a) = 0$, and \\ $\mathbb{P}(d'_{XY} \leq a') = \hat{F}_{d'_{XY}}(a') = 0$ (see \textbf{Figure 1} in main text). Given $n$ increasing-ordered data points, the (discrete) ECDF, $\hat{F}_n(t) = \frac{1}{n}\sum_{i = 1}^n\mathds{1}_{[x_i \leq t]}$, comprises a step function having jump \\ discontinuities of size $\frac{1}{n}$ at each sample observation ($x_i$), excluding ties (or steps of weight $\frac{i}{n}$ with tied observations), where $\mathds{1}(x)$ is the indicator function. Equations (2)-(5) herein clearly demonstrate the asymmetric directionality of the proposed metrics. Furthermore, calculation of the DNA barcode gap estimators given in the main text is straightforward as they implicitly account for both total distribution area and overlap. Nevertheless, the total areas bounded by intraspecific and interspecific distributions on [$a$, $b$], and combined distributions on [$a'$, $b$] (see \textbf{Figure 1} in the main text) are given by
 
 \begin{align}
 \notag A &= p_x + q_x \\ 
+\notag &= \mathbb{P}(d_{ij} \geq a) + \mathbb{P}(d_{XY} \leq b) \\
 \notag  &= 1 - \hat{F}_{d_{ij}}(a) + \mathbb{P}(d_{ij} = a) + \hat{F}_{d_{XY}}(b) \\
   &= \hat{F}_{d_{ij}}(b) - \hat{F}_{d_{ij}}(a) + \mathbb{P}(d_{ij} = a) + \hat{F}_{d_{XY}}(b) \\[1ex]
 \notag A' &= p'_x + q'_x \\
+\notag &= \mathbb{P}(d_{ij} \geq a') + \mathbb{P}(d'_{XY} \leq b) \\
 \notag &= 1 - \hat{F}_{d_{ij}}(a') + \mathbb{P}(d_{ij} = a') + \hat{F}_{d'_{XY}}(b) \\
   &= \hat{F}_{d_{ij}}(b) - \hat{F}_{d_{ij}}(a') + \mathbb{P}(d_{ij} = a') + \hat{F}_{d'_{XY}}(b)
 \end{align}
 
-\noindent whose values lie in [0, 2]. Similarly, the degree of distribution overlap is
-
-\begin{align}
-\notag O &= \hat{F}_{\mathrm{min}(d_{ij}, \hspace{0.5mm} d_{XY})}(a, b) \\
-&= \hat{F}_{\mathrm{min}(d_{ij}, \hspace{0.5mm} d_{XY})}(b) - \hat{F}_{\mathrm{min}(d_{ij}, \hspace{0.5mm} d_{XY})}(a)\\
-\notag O' &= \hat{F}_{\mathrm{min}(d_{ij}, \hspace{0.5mm} d'_{XY})}(a', b) \\ &= \hat{F}_{\mathrm{min}(d_{ij}, \hspace{0.5mm} d'_{XY})}(b) - \hat{F}_{\mathrm{min}(d_{ij}, \hspace{0.5mm} d'_{XY})}(a') 
-\end{align}
-
-\noindent whose support is on [0, 1]. All above estimators are (uniformly and pointwise) consistent, approaching their true (function) values almost surely, and therefore also in probability to one, as the sample size tends to infinity, as guaranteed by both the Strong and Weak Laws of Large Numbers, and by the Glivenko-Cantelli Theorem.
-
+\noindent whose values lie in [0, 2]. 
 
 \end{document}
