--- a/References.bib
+++ b/References.bib
@@ -249,6 +249,15 @@ doi = {https://doi.org/10.1214/20-BA1221},
 year = {2021}
 }
 
+ @book{wickham2016ggplot2,
+    author = {Wickham, H},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+
 @article{yang2017bayesian,
   author = {Yang, Z and Rannala, B},
   title = {Bayesian species identification under the multispecies coalescent provides significant improvements to {DNA} barcoding analyses},
@@ -256,4 +265,14 @@ year = {2021}
   year = {2017},
   volume = {26},
   pages = {3028--3036}
+}
+
+@article{young2021macer,
+  author = {Young, RG and Gill, R and Gillis, D and Hanner, RH},
+  title = {{Molecular Acquisition, Cleaning and Evaluation in R (MACER) - A tool to assemble molecular marker datasets from BOLD and GenBank}},
+  journal = {Biodiversity Data Journal},
+  volume = {9},
+  pages = {e71378},
+  year = {2021},
+  doi = {10.3897/BDJ.9.e71378}
 }
