--- a/Supplementary Information.tex
+++ b/Supplementary Information.tex
@@ -80,6 +80,13 @@ q'_x &=  \mathbb{P}(d'_{XY} \leq b) \notag \\
   &= \hat{F}_{d_{ij}}(b) - \hat{F}_{d_{ij}}(a') + \mathbb{P}(d_{ij} = a') + \hat{F}_{d'_{XY}}(b)
 \end{align}
 
-\noindent whose values lie in [0, 2]. 
+\noindent whose values lie in [0, 2]. Similarly, the degree of distribution overlap is
+
+\begin{align}
+\notag O &= \hat{F}_{\mathrm{min}(d_{ij}, \hspace{0.5mm} d_{XY})}(b) - \hat{F}_{\mathrm{min}(d_{ij}, \hspace{0.5mm} d_{XY})}(a) \\
+\notag O' &= \hat{F}_{\mathrm{min}(d_{ij}, \hspace{0.5mm} d'_{XY})}(b) - \hat{F}_{\mathrm{min}(d_{ij}, \hspace{0.5mm} d'_{XY})}(a') 
+\end{align}
+
+\noindent whose support is on [0, 1].
 
 \end{document}
